--- a/public/assignment/client/views/forms/field.view.html
+++ b/public/assignment/client/views/forms/field.view.html
@@ -1,7 +1,7 @@
 <div class="col-sm-9 col-sm-offset-3 col-md-8 col-md-offset-2 main">
-    <h2>Forms: Registration</h2>
+    <h2>{{formTitle}}</h2>
     <ul class="nav nav-tabs">
-        <li role="presentation"><a href="#">Forms</a></li>
+        <li role="presentation"><a href="#/forms">Forms</a></li>
         <li role="presentation" class="active"><a href="#/fields">Fields</a></li>
     </ul>
 
