--- a/public/assignment/client/views/forms/field.view.html
+++ b/public/assignment/client/views/forms/field.view.html
@@ -5,25 +5,25 @@
         <li role="presentation" class="active"><a href="#/fields">Fields</a></li>
     </ul>
 
-    <div class="table-responsive padding" ng-model="fields">
+    <div id="sortable" class="table-responsive padding" ng-model="fields">
         <table class="table">
-            <div class="row col-xs-12" ng-repeat="field in fields">
+            <div class="row col-xs-12 " ng-repeat="field in fields">
                 <div class="col-xs-6">
                     <form-field data="field"></form-field>
                 </div>
-                <div class="col-xs-6">
-                    <a href="#" class="btn btn-sm btn-primary">
+                <div class="col-xs-6 btn-padding">
+                    <button ng-click="updateField(field)" class="btn btn-sm btn-primary">
                         <scan class="glyphicon glyphicon-pencil"></scan>
-                    </a>
-                    <a href="#" class="btn btn-sm btn-success">
+                    </button>
+                    <button ng-click="addField(field)" class="btn btn-sm btn-success">
                         <scan class="glyphicon glyphicon-plus"></scan>
-                    </a>
-                    <a href="#" class="btn btn-sm btn-danger">
+                    </button>
+                    <button ng-click="removeField(field)" class="btn btn-sm btn-danger">
                         <scan class="glyphicon glyphicon-remove"></scan>
-                    </a>
-                    <a href="#" class="btn btn-sm btn-warning">
+                    </button>
+                    <div class="handle btn btn-sm btn-warning">
                         <scan class="glyphicon glyphicon-menu-hamburger"></scan>
-                    </a>
+                    </div>
                 </div>
             </div>
         </table>
@@ -32,19 +32,38 @@
     <label class="form-group padding-left" for="dropdown">Add new field: </label>
     <div class="row form-group col-xs-12">
         <div class="col-xs-8">
-            <select class="form-control" id="dropdown" ng-model="model.fieldType">
-                <option>Single Line Text</option>
-                <option>Date</option>
-                <option>Dropdown</option>
-                <option>Checkboxes</option>
-                <option>Radio Buttons</option>
-                <option>Paragraph Text Field</option>
+            <select class="form-control" id="dropdown" ng-model="newField.type">
+                <option value="TEXT">Single Line Text</option>
+                <option value="DATE">Date</option>
+                <option value="OPTIONS">Dropdown</option>
+                <option value="CHECKBOXES">Checkboxes</option>
+                <option value="RADIOS">Radio Buttons</option>
+                <option value="TEXTAREA">Paragraph Text Field</option>
             </select>
+
         </div>
         <div class="col-xs-4">
-            <a href="#" class="btn btn-sm btn-success btn-padding">
-                <scan ng-click="addField(model.fieldType)" class="glyphicon glyphicon-plus"></scan>
-            </a>
+            <button ng-click="addField(newField)" class="btn btn-sm btn-success">
+                <scan  class="glyphicon glyphicon-plus"></scan>
+            </button>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="fieldModal" tabindex="-1" role="dialog" aria-labelledby="fieldModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="fieldModalLabel">{{modalField}}</h4>
+            </div>
+            <div class="modal-body">
+                <modal-field data="currentField"></modal-field>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" ng-click="updateFieldFromModal(currentField)" class="btn btn-primary">Ok</button>
+            </div>
         </div>
     </div>
 </div>
