--- a/public/assignment/client/views/forms/field.view.html
+++ b/public/assignment/client/views/forms/field.view.html
@@ -55,7 +55,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title" id="fieldModalLabel">{{modalField}}</h4>
+                <h4 class="modal-title" id="fieldModalLabel">{{currentField.label}}</h4>
             </div>
             <div class="modal-body">
                 <modal-field data="currentField"></modal-field>
